fixed greedy code